--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # TODO Comment out this rule if environment variables can be committed
 .env
 
+Gemfile.lock
 ## Environment normalization:
 /.bundle
 /vendor/bundle
